--- a/employee-serverless-api/package.json
+++ b/employee-serverless-api/package.json
@@ -1,9 +1,37 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "scripts" : {
-    "test": "echo \"No tests yet...\""
+  "name": "employee-serverless-api",
+  "version": "1.0.0",
+  "description": "Back-End application using Azure Functions + Azure SQL + Prisma",
+  "scripts": {
+    "dev": "func start"
   },
-  "author": ""
+  "keywords": [
+    "api",
+    "full-stack-app",
+    "prisma",
+    "azure-sql",
+    "javascript",
+    "vue",
+    "crud-app",
+    "azure",
+    "azure-web-app",
+    "azure-app-service",
+    "aswa",
+    "azure-static-web-apps",
+    "azure-functions",
+    "serverless"
+  ],
+  "author": "Glaucia Lemos <@glaucia_lemos - Twitter>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/glaucia86/azuresql-prisma-talk/issues"
+  },
+  "homepage": "https://github.com/glaucia86/azuresql-prisma-talk#readme",
+  "devDependencies": {
+    "azure-functions-core-tools": "^3.0.3904",
+    "prisma": "^3.11.0"
+  },
+  "dependencies": {
+    "@prisma/client": "^3.11.0"
+  }
 }
