--- a/employee-serverless-api/package.json
+++ b/employee-serverless-api/package.json
@@ -28,8 +28,7 @@
   },
   "homepage": "https://github.com/glaucia86/azuresql-prisma-talk#readme",
   "devDependencies": {
-    "azure-functions-core-tools": "^3.0.3904",
-    "prisma": "^3.11.0"
+    "azure-functions-core-tools": "^3.0.3904"
   },
   "dependencies": {
     "@prisma/client": "^3.11.0"
