--- a/employee-serverless-api/package.json
+++ b/employee-serverless-api/package.json
@@ -27,10 +27,11 @@
     "url": "https://github.com/glaucia86/azuresql-prisma-talk/issues"
   },
   "homepage": "https://github.com/glaucia86/azuresql-prisma-talk#readme",
-  "devDependencies": {
-    "azure-functions-core-tools": "^3.0.3904"
-  },
   "dependencies": {
     "@prisma/client": "^3.11.0"
+  },
+  "devDependencies": {
+    "@azure/functions": "^3.0.0",
+    "prisma": "^3.11.0"
   }
 }
