creating new scripts in the 'package.json' file

--- a/employee-serverless-api/package.json
+++ b/employee-serverless-api/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "Back-End application using Azure Functions + Azure SQL + Prisma",
   "scripts": {
-    "dev": "func start"
+    "dev": "func start",
+    "db:push": "prisma db push",
+    "prestart": "npm run build && func extensions install",
+    "start": "npm run start:host & npm run watch",
+    "build:production": "npm run prestart && npm prune --production"
   },
   "keywords": [
     "api",
