changing the 'settings.json' file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,10 @@
   "azureFunctions.projectLanguage": "JavaScript",
   "azureFunctions.projectRuntime": "~4",
   "debug.internalConsoleOptions": "neverOpen",
-  "azureFunctions.preDeployTask": "npm prune"
+  "azureFunctions.preDeployTask": "npm prune",
+  "liveServer.settings.proxy": {
+    "enable": true,
+    "baseUri": "/api/",
+    "proxyUri": "http://localhost:7071/api/employees/"
+}
 }
