updating some coding.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,13 @@
 {
-  "azureFunctions.deploySubpath": "employee-serverless-api",
+  "azureFunctions.deploySubpath": "api",
   "azureFunctions.postDeployTask": "npm install",
   "azureFunctions.projectLanguage": "JavaScript",
-  "azureFunctions.projectRuntime": "~3",
+  "azureFunctions.projectRuntime": "~2",
   "debug.internalConsoleOptions": "neverOpen",
   "azureFunctions.preDeployTask": "npm prune",
+  "liveServer.settings.proxy": {
+    "enable": true,
+    "baseUri": "/api/employees/",
+    "proxyUri": "http://localhost:7071/api/employees/"
+  }
 }
