--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,11 +4,11 @@
 		{
 			"type": "func",
 			"command": "host start",
-			"problemMatcher": "$func-node-watch",
+			"problemMatcher": "$func-watch",
 			"isBackground": true,
 			"dependsOn": "npm install",
 			"options": {
-				"cwd": "${workspaceFolder}/employee-serverless-api"
+				"cwd": "${workspaceFolder}/api"
 			}
 		},
 		{
@@ -16,7 +16,7 @@
 			"label": "npm install",
 			"command": "npm install",
 			"options": {
-				"cwd": "${workspaceFolder}/employee-serverless-api"
+				"cwd": "${workspaceFolder}/api"
 			}
 		},
 		{
@@ -25,7 +25,7 @@
 			"command": "npm prune --production",
 			"problemMatcher": [],
 			"options": {
-				"cwd": "${workspaceFolder}/employee-serverless-api"
+				"cwd": "${workspaceFolder}/api"
 			}
 		}
 	]
