including 'staticwebapp.config.json'

--- a/client/staticwebapp.config.json
+++ b/client/staticwebapp.config.json
@@ -3,6 +3,10 @@
     {
       "route": "/list-employees",
       "rewrite": "/index.html"
+    },
+    {
+      "route": "/list-employees/*",
+      "rewrite": "/index.html"
     }
   ]
 }
