including 'staticwebapp.config.json'

--- a/client/staticwebapp.config.json
+++ b/client/staticwebapp.config.json
@@ -1,11 +1,15 @@
 {
   "routes": [
     {
+      "route": "/index.html",
+      "redirect": "/"
+    },
+    {
       "route": "/list-employees",
       "rewrite": "/index.html"
     },
     {
-      "route": "/list-employees/*",
+      "route": "/edit-employee/*",
       "rewrite": "/index.html"
     }
   ]
