--- a/api/package.json
+++ b/api/package.json
@@ -26,5 +26,12 @@
   "bugs": {
     "url": "https://github.com/glaucia86/azuresql-prisma-talk/issues"
   },
-  "homepage": "https://github.com/glaucia86/azuresql-prisma-talk#readme"
+  "homepage": "https://github.com/glaucia86/azuresql-prisma-talk#readme",
+  "devDependencies": {
+    "@azure/functions": "^3.0.0",
+    "prisma": "^3.12.0"
+  },
+  "dependencies": {
+    "@prisma/client": "^3.12.0"
+  }
 }
