changing the prisma version and including new field 'schema.prisma'

--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Back-End application using Azure Functions + Azure SQL + Prisma",
   "scripts": {
-    "dev": "func start"
+    "dev": "func start",
+    "postinstall": "npx prisma generate"
   },
   "keywords": [
     "api",
@@ -29,9 +30,9 @@
   "homepage": "https://github.com/glaucia86/azuresql-prisma-talk#readme",
   "devDependencies": {
     "@azure/functions": "^3.0.0",
-    "prisma": "3.11.0"
+    "prisma": "^3.13.0"
   },
   "dependencies": {
-    "@prisma/client": "3.11.0"
+    "@prisma/client": "^3.13.0"
   }
 }
