--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Back-End application using Azure Functions + Azure SQL + Prisma",
   "scripts": {
-    "dev": "func start"
+    "dev": "func start",
+    "prisma:generate": "prisma generate"
   },
   "keywords": [
     "api",
