removing the database from prisma

--- a/api/package.json
+++ b/api/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "Back-End application using Azure Functions + Azure SQL + Prisma",
   "scripts": {
-    "dev": "func start",
-    "prisma:generate": "prisma generate"
+    "dev": "func start"
   },
   "keywords": [
     "api",
